--- a/package.json
+++ b/package.json
@@ -1,14 +1,73 @@
 {
-  "name": "flowchartstorm",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@projectstorm/react-diagrams": "^6.0.1-beta.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "closest": "^0.0.1",
+    "dagre": "^0.8.5",
+    "mathjs": "^6.6.1",
+    "pathfinding": "^0.4.18",
+    "paths-js": "^0.4.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "typescript": "^3.8.3",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^5.1.9",
+    "@storybook/addon-options": "^5.1.9",
+    "@storybook/addons": "^5.1.9",
+    "@storybook/react": "^5.1.9",
+    "@storybook/storybook-deployer": "^2.8.1",
+    "@storybook/theming": "^5.1.9",
+    "@types/dagre": "^0.7.42",
+    "@types/jest": "^24.0.16",
+    "@types/jest-environment-puppeteer": "^4.0.0",
+    "@types/lodash": "^4.14.136",
+    "@types/mathjs": "^6.0.1",
+    "@types/node": "^12.6.8",
+    "@types/promise": "^7.1.30",
+    "@types/puppeteer": "^1.19.0",
+    "@types/react": "^16.8.23",
+    "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.4",
+    "cross-env": "^5.2.0",
+    "css-loader": "^3.1.0",
+    "enzyme": "^3.10.0",
+    "file-loader": "^4.1.0",
+    "glob": "^7.1.4",
+    "jest": "^24.8.0",
+    "jest-cli": "^24.8.0",
+    "jest-puppeteer": "^4.3.0",
+    "json-beautify": "^1.1.0",
+    "lerna": "^3.16.4",
+    "lodash": "4.*",
+    "prettier": "^1.18.2",
+    "puppeteer": "^1.19.0",
+    "raf": "^3.4.1",
+    "raw-loader": "^3.1.0",
+    "react-syntax-highlighter": "^11.0.2",
+    "react-test-renderer": "^16.8.6",
+    "resize-observer-polyfill": "^1.5.1",
+    "rimraf": "^3.0.2",
+    "source-map-loader": "^0.2.4",
+    "storybook-host": "^5.1.0",
+    "storybook-readme": "^5.0.5",
+    "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.3.0",
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^6.0.4",
+    "val-loader": "^1.1.1",
+    "webpack": "^4.38.0",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
